src/test/ui/issues/issue-15207.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-15207.rs:3:9
   |
LL |         break.push(1)
   |         ^^^^^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
